--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Code Union</title>
     <!-- all css -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/all.css">
 </head>
 
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="image/logo.png" alt="logo" width="50" height="47.5">
+                <img src="image/logo.png" alt="logo" width="40px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,16 +29,16 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item ml-5">
                         <a class="nav-link" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-5">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-5">
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-5">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
@@ -54,6 +55,9 @@
                 <button type="button" class="btn btn-blue"><img src="./image/arrow.png" alt="arrow" width="20"></button>
                 <button type="button" class="btn btn-primary">About Us</button>
             </div>
+        </div>
+        <div class="site-support">
+            <i class="fa fa-vk"></i>
         </div>
     </div>
 
