--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- meta tags -->
+    <!-- meta tag -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,17 +10,16 @@
     <meta name="describe" content="code union - commonwealth of developers">
     <!-- title -->
     <title>Code Union</title>
-    <!-- all css -->
+    <!-- css -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/all.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="image/logo.png" alt="logo" width="40px">
+                <img src="image/logo.png" alt="logo" width="35px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,16 +47,16 @@
 
     <div class="home">
         <div class="home-block">
-            <img src="image/leaves.png" alt="illustration">
+            <img src="image/leaves.png" alt="illustration" width="100">
             <h1>./codeunion</h1>
             <p>We are together. We are unity.<br>We are union.</p>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-blue"><img src="./image/arrow.png" alt="arrow" width="20"></button>
+                <button type="button" class="btn btn-blue"><img src="image/arrow.png" alt="arrow" width="20"></button>
                 <button type="button" class="btn btn-primary">About Us</button>
             </div>
         </div>
-        <div class="site-support">
-            <i class="fa fa-vk"></i>
+        <div class="btn-support">
+            <a href="mailto:tech.codeunion@gmail.com"><img src="image/icon/gmail.svg" alt="icon-support" width="50px"></a>
         </div>
     </div>
 
