--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- meta tag -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Sadibekov && Maripbekov">
     <meta name="describe" content="code union - commonwealth of developers">
@@ -59,7 +59,38 @@
             <a href="mailto:tech.codeunion@gmail.com"><img src="image/icon/gmail.svg" alt="icon-support" width="50px"></a>
         </div>
     </div>
+    
+    <section class="about">
+    <div class="container">
+        <div class="about-block">
+            <div class="de-line"></div>
+            <h3>About</h3>
+            <p>Code Union is a small IT startup based in Kazakhstan, Almaty. Our first goal is to get good  impressions  from hightech technologies like Robotics, Web Development, Software Engineering</p>
+            <div class="de-line"></div>
+        </div>
+    </div>
 
+    <div class="container">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-3 col-md-6">
+                <img src="image/icon/android.jpg" alt="icon">
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <img src="image/icon/android.jpg" alt="icon">
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <img src="image/icon/android.jpg" alt="icon">
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <img src="image/icon/android.jpg" alt="icon">
+            </div>
+        </div>
+    </div>
+    </div>
+    </section>
+
+    <section class="portfolio"></section>
 
 
 
