Nasa Space Apps Challenge * Appex Site

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>Code Union</title>
     <!-- css -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="style/all.css">
 </head>
 
 <body>
+    <div id="home"></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -29,16 +31,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ml-5">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item ml-5">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item ml-5">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item ml-5">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -55,42 +57,48 @@
                 <button type="button" class="btn btn-primary">About Us</button>
             </div>
         </div>
-        <div class="btn-support">
-            <a href="mailto:tech.codeunion@gmail.com"><img src="image/icon/gmail.svg" alt="icon-support" width="50px"></a>
-        </div>
-    </div>
-    
-    <section class="about">
-    <div class="container">
-        <div class="about-block">
-            <div class="de-line"></div>
-            <h3>About</h3>
-            <p>Code Union is a small IT startup based in Kazakhstan, Almaty. Our first goal is to get good  impressions  from hightech technologies like Robotics, Web Development, Software Engineering</p>
-            <div class="de-line"></div>
+        <div class="btn-support animated heartBeat infinite">
+            <a href="mailto:tech.codeunion@gmail.com"><img src="image/icon/gmail.svg" alt="icon-support"
+                    width="50px"></a>
         </div>
     </div>
 
-    <div class="container">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-3 col-md-6">
-                <img src="image/icon/android.jpg" alt="icon">
-            </div>
-            <div class="col-xl-3 col-md-6">
-                <img src="image/icon/android.jpg" alt="icon">
-            </div>
-            <div class="col-xl-3 col-md-6">
-                <img src="image/icon/android.jpg" alt="icon">
-            </div>
-            <div class="col-xl-3 col-md-6">
-                <img src="image/icon/android.jpg" alt="icon">
+    <section class="about" id="about">
+        <div class="container">
+            <div class="about-block">
+                <div class="de-line"></div>
+                <h3>About</h3>
+                <p>Code Union is a small IT startup based in Kazakhstan, Almaty. Our first goal is to get good
+                    impressions from hightech technologies like Robotics, Web Development, Software Engineering</p>
+                <div class="de-line"></div>
             </div>
         </div>
-    </div>
-    </div>
+
+        <div class="container">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-3 col-md-6">
+                        <img src="image/icon/android.jpg" alt="icon">
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <img src="image/icon/android.jpg" alt="icon">
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <img src="image/icon/android.jpg" alt="icon">
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <img src="image/icon/android.jpg" alt="icon">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section class="portfolio"></section>
+    <section class="portfolio" id="portfolio">
+        <div class="container">
+
+        </div>
+    </section>
 
 
 
