--- a/appex/index.html
+++ b/appex/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" id="scrollToAbout">Team</a>
                     </li>
                     <li class="nav-item p-2">
-                        <button class="btn btn-outline-primary"><a href="./downloads/app-release.apk" download="">
+                        <button class="btn btn-outline-primary"><a href="./downloads/Appex.apk" download="">
                                 Download</a></button>
                     </li>
                 </ul>
