--- a/appex/index.html
+++ b/appex/index.html
@@ -33,8 +33,8 @@
                         <a class="nav-link" id="scrollToAbout">Team</a>
                     </li>
                     <li class="nav-item p-2">
-                        <button class="btn btn-outline-primary"><a href="./downloads/Appex.apk" download="">
-                                Download</a></button>
+                        <button class="btn btn-outline-primary">Download<a href="./downloads/Appex.apk"
+                                download=""></a></button>
                     </li>
                 </ul>
             </div>
