--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -51,8 +51,8 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ml-auto">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" onclick="goToSection('home')" href="#home">Главная</a>
                     </li>
