--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -151,6 +151,23 @@
             </div>
         </div>
 
+        <section class="gallery p-5">
+            <div class="container">
+                <h2>Наша галерея счастья</h2>
+                <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
+                <div class="gallery-grid wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"">
+                    <img src=" ./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                    <img src="./images/photo1.jpg" alt="photo">
+                </div>
+            </div>
+        </section>
+
         <div class="container about pt-5 pb-5 justify-content-center">
             <div class="row wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                 <div class="col-md-6">
