#maripbekoff 07.02.2020 21:46 *Added timeline and learning page

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -116,6 +116,7 @@
                             nam
                             enim sapiente eius modi veritatis labore.
                         </p>
+                        <a href="learning.html">Перейти ></a>
                     </div>
                     <div class="col-md-3">
                         <img src="images/icons/2.jpg" width="50%" alt="Услуги">
@@ -126,6 +127,7 @@
                             nam
                             enim sapiente eius modi veritatis labore.
                         </p>
+                        <a href="#">Перейти ></a>
                     </div>
                     <div class="col-md-3">
                         <img src="images/icons/3.png" width="50%" alt="Услуги">
@@ -136,16 +138,18 @@
                             nam
                             enim sapiente eius modi veritatis labore.
                         </p>
+                        <a href="#">Перейти ></a>
                     </div>
                     <div class="col-md-3">
                         <img src="images/icons/4.png" width="50%" alt="Услуги">
                         <h3>Взгляд</h3>
-                        <p>
+                        <p>￼￼￼￼￼￼￼￼
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur vitae provident porro
                             dolor
                             nam
                             enim sapiente eius modi veritatis labore.
                         </p>
+                        <a href="#">Перейти ></a>
                     </div>
                 </div>
             </div>
